--- a/GingerNote/.vscode/tasks.json
+++ b/GingerNote/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/GingerNote/GingerNote.csproj"
+                "${workspaceFolder}/GingerNote.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
